[package]
name = "stack-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
axum = "0.7.5"
chrono = "0.4.37"
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "time",
  "runtime-tokio",
  "uuid",
] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
